# CW_habits_DRF

./: README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
